# Ising-Model

./: CMakeLists.txt  README.md  mk  run_tests
SFMT/: test-sse2-M19937  test-std-M19937
bind/: CMakeLists.txt  metropolis_hastings_py.cpp  metropolis_hastings_py.h  register_py.cpp
core/: CMakeLists.txt  lattice.cpp  lattice.h  metropolis_hastings.cpp  metropolis_hastings.h
python/: plot_temp.py  tests.py  ui.py
test/: CMakeLists.txt  test_lattice.cpp
